src/sources/forus-platform/scss/general/website/includes/components/buttons.scss
@mixin button($bg, $color, $hover_color, $bg_hover_color) {

    border: 1px solid transparent;
    background-color: $bg;
    color: $color !important;
    font-weight: 600;
    border-radius: 6px;
    position: relative;
    width: 100%;
    max-width: 220px;
    padding: 20px 10px;
    font-family: inherit;
    text-align: center;
    font-size: 18px;
    @include transition();
    a{
        color: $color!important;
        font-size: 18px;
        text-align: center;
    }
    & > svg{
        position: relative;
        height: 12px;
        width: 16px;
        display: inline-block;
        path{
            fill: $color;
        }
    }
    &:hover, &:active, &:focus{
        @include transition();
        outline: none;
        text-decoration: none;
        background-color: $bg_hover_color!important;
        color: $hover_color!important;
        & > svg{
            left: 10px;
        }
    }
    &[disabled], &.disabled{
        @include transition();
        border-radius: 8px;
        background-color: rgba(158, 177, 215, 0.2);
        color: #9eaad7 !important;
        &:hover, &:active, &:focus{
            background-color: rgba(158, 177, 215, 0.2)!important;
            cursor: not-allowed;
            color: #9eaad7;
        }
    }
    @media (max-width: 767px) {
        font-size: 14px;
        padding: 12px 10px ;
        line-height: 1;
        max-width: 160px;
    }
}

.button-center {
    margin: 0 auto;
}
.button-left {
    float: left;
}

.btn.main_button { @include button($forus-demi-blue, #ffffff, #FFF, $forus-demi-blue); }

.login_btn{
    $forus-sky-blue2: rgba(12,102,255,0.1);
    @include button($forus-sky-blue2, $forus-sky-blue, #ffffff, $forus-demi-blue);
    width: 161px;
    height: 60px;
}

.btn_link{
    position: relative;
    span{
        display: inline-block;
        vertical-align: middle;
        font-weight: 500;
        color: $forus-demi-blue;
        svg{
            display: block;
            margin-left: 10px;
            -webkit-transform: rotate(-90deg);
            -ms-transform: rotate(-90deg);
            transform: rotate(-90deg);
            width: 34px;
            height: 34px;
            g, path{
                fill: $forus-demi-blue!important;
            }
        }
    }
}
.play_btn_link{
    line-height: 22px;
    font-family: $bf;
    
    font-weight: 500;
    font-style: normal;
    font-stretch: normal;
    letter-spacing: normal;
    margin-top: 35px;
    svg{
        position: relative;
        top: 7px;
        g, path{
            stroke: rgb(255,255,255);
            stroke-width: 0;
        }
    }
    .play_btn{
        width: 26px;
        height: 26px;
        position: relative;
        vertical-align: top;
        svg{
            height: 25px;
            width: 25px;
            opacity: 1;
            &:nth-child(1){
                opacity: 1;
                left:5px;
            }
            &:nth-child(2){
                opacity: 0;
                position: absolute;
                left:5px;
                top: 9px;
            }
        }
    }
    &.active{
        .play_btn{
            svg{
                &:nth-child(1){
                    opacity: 0;
                }
                &:nth-child(2){
                    opacity: 1;
                }
            }
        }
    }
}
.modal-login-btn {
    height: 46px;
    width: 175px !important;
    padding: 0 !important;
}

.download__buttons {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    overflow: auto;
}

.download__buttons-item {
    display: block;
    margin: 30px;
    text-decoration: none;
    -webkit-box-shadow: 0 10px 30px 0 rgba(0,0,0,0.5);
    -moz-box-shadow: 0 10px 30px 0 rgba(0,0,0,0.5);
    box-shadow: 0 10px 30px 0 rgba(0,0,0,0.5);
}
.download__buttons-item img {
    display: block;
    max-width: 100%;
}

.main_button {
    margin: 20px auto 0;
    display: block;
}

.dl_buttons {
    width: 130px;
    height: 40px;
    margin: 0 2.5% 0 0;
}

.txt_link{
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    span {
        color: $forus-demi-blue;
        font-weight: 500;
    }
    svg{
        fill: $forus-demi-blue;
        height: 22px;
        width: 22px;
    }
}

@media (max-width: 767px) {
    .dl_buttons {
        display: inline-block;
    }
    .btn_link {
        display: block;
        margin: 30px auto 20px;
        svg{
            width: 20px!important;
            height: 20px!important;
        }
    }
    .btn_link{
        width: 100%;
        display: block;
        margin: 0;
        margin-right: 15px;
        order: -1;
        flex: auto;
        flex-basis:10%;
        text-align: right;

        span:not([class*='play_btn']){
            display: none;
        }
    }
}
@media (max-width: 576px) {
    .main_button {
        float: unset;
    }
}

